refactor(jpms): tighten transitive policy and verify the module graph in CI
- drop 'transitive' where it carries no meaning: java.logging in core (no
  j.u.l type in the exported API), jakarta.cdi in fault-tolerance and the
  two mcp extensions (modules without exports)
- declare java.logging explicitly in portable-ext, build-compatible-ext,
  mp-config and mp-telemetry (they were relying on core's transitive)
- centralize moditect/license/dependency/exec plugin versions and the
  MicroProfile API versions in the root POM
- jlink-vidocq: assemble the full closure (provided APIs included) next to
  the ModiTect-patched jars and fail 'verify' if the first-party roots do
  not resolve on a strict module path; run it in the Linux CI job
- license gate now excludes 'provided' (supplied by the runtime, never
  redistributed)
- fix profile comment/description: the profile prepares and verifies the
  modular set, it does not run jlink

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>

Signed-off-by: Yann Blazart <yann@durand-blazart.fr>